# dttool

./: .gitignore  Dockerfile  README.md  dttool.service  dttool.service.watchdog  pyproject.toml  requirements.txt  setup.sh
dattool/: dttool.service.watchdog  setup.sh
dattool/dttool/: __main__.py  exceptions.py
dttool/: __init__.py  __main__.py  constants.py  dttool.service  exceptions.py  main.py  requirements.txt
dttool-ui/: README.md
dttool/commands/: __init__.py  arguments.py  cli_options.py  file_converter_commands.py  webserver_commands.py
dttool/dttool/: __init__.py
dttool/dttool/commands/: __init__.py  arguments.py  file_converter_commands.py
dttool/dttool/file_converter/: converter.py
dttool/dttool/rpc/api_server/: __init__.py
dttool/persistence/: base.py  models.py
dttool/rpc/: rpc.py
dttool/rpc/api_server/: __init__.py  api_schemas.py  api_v1.py  webserver.py
